crates/weaver-e2e/tests/snapshots/refactor_rust_analyzer_cli_snapshots__refactor_automatic_rust_routing.snap
---
source: crates/weaver-e2e/tests/refactor_rust_analyzer_cli_snapshots.rs
expression: transcript
---
Transcript {
    command: "weaver --daemon-socket tcp://<daemon-endpoint> --output json act refactor --refactoring rename --file src/main.rs --position 1:4 new_name=renamed_name",
    status: 0,
    stdout: "{\"files_deleted\":0,\"files_written\":1,\"status\":\"ok\"}",
    stderr: "{\"details\":{\"candidates\":[{\"accepted\":false,\"provider\":\"rope\",\"reason\":\"unsupported_language\"},{\"accepted\":true,\"provider\":\"rust-analyzer\",\"reason\":\"matched_language_and_capability\"}],\"capability\":\"rename-symbol\",\"language\":\"rust\",\"outcome\":\"selected\",\"selected_provider\":\"rust-analyzer\",\"selection_mode\":\"automatic\"},\"status\":\"ok\",\"type\":\"CapabilityResolution\"}",
    requests: [
        Object {
            "arguments": Array [
                String("--refactoring"),
                String("rename"),
                String("--file"),
                String("src/main.rs"),
                String("--position"),
                String("1:4"),
                String("new_name=renamed_name"),
            ],
            "command": Object {
                "domain": String("act"),
                "operation": String("refactor"),
            },
        },
    ],
}
