crates/weaver-e2e/tests/snapshots/refactor_rust_analyzer_cli_snapshots__refactor_rust_provider_mismatch_refusal.snap
---
source: crates/weaver-e2e/tests/refactor_rust_analyzer_cli_snapshots.rs
expression: transcript
---
Transcript {
    command: "weaver --daemon-socket tcp://<daemon-endpoint> --output json act refactor --provider rope --refactoring rename --file src/main.rs --position 1:4 new_name=renamed_name",
    status: 1,
    stdout: "",
    stderr: "{\"details\":{\"candidates\":[{\"accepted\":false,\"provider\":\"rope\",\"reason\":\"explicit_provider_mismatch\"},{\"accepted\":false,\"provider\":\"rust-analyzer\",\"reason\":\"not_requested\"}],\"capability\":\"rename-symbol\",\"language\":\"rust\",\"outcome\":\"refused\",\"refusal_reason\":\"explicit_provider_mismatch\",\"requested_provider\":\"rope\",\"selection_mode\":\"explicit_provider\"},\"status\":\"error\",\"type\":\"CapabilityResolution\"}",
    requests: [
        Object {
            "arguments": Array [
                String("--provider"),
                String("rope"),
                String("--refactoring"),
                String("rename"),
                String("--file"),
                String("src/main.rs"),
                String("--position"),
                String("1:4"),
                String("new_name=renamed_name"),
            ],
            "command": Object {
                "domain": String("act"),
                "operation": String("refactor"),
            },
        },
    ],
}
